# ClassSerialization

./: CMakeLists.txt  README.md
include/: Archive.hpp  serialization.hpp
include/Archive/: Archive.cpp  Archive.hpp
include/tinyxml2/: tinyxml2.cpp
src/: main.cpp
src/Archive/: Archive.cpp
test/: CMakeLists.txt  main.cpp
